Fix contrast issues on index.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,6 +69,7 @@ h5 {
     color: var(--primary-color);
 }
 
+h4 span,
 h5 span {
     background-color: var(--secondary-color);
     color: var(--primary-color);
